<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/my_first_app_for_android"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/my_first_application_for_android"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:hint="@string/search" />

    <Button
        android:id="@+id/search_go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/searching" />

    <Switch
        android:id="@+id/switch_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:switchPadding="@android:dimen/app_icon_size"
        android:text="@string/tap_me"
        android:textStyle="italic" />

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:gravity="start"
        android:text="@string/app_name"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:disabledAlpha="@android:integer/config_longAnimTime"
        android:textOff="@string/off" />


</LinearLayout>